syntax = "proto3";

import "trpc/proto/trpc_options.proto";
import "common.proto";

package trpc.poetry;
option go_package="pb/poetry";

service Poetry {
  rpc DescribePoetryInfo (DescribePoetryInfoRequest) returns (DescribePoetryInfoResponse) {
    option (trpc.alias) = "/poetry/DescribePoetryInfo";
  }
}

message DescribePoetryInfoRequest {
  repeated common.Filter filter = 1;
  int32 offset = 2;
  int32 limit = 6;
}

message PoetryInfo {
    int64 id = 1;
    string title = 2;
    string paragraphs = 3;
    string author = 4;
    string rhythmic = 5;
    string notes = 6;
    string poetryType = 7;
    string dynasty = 8;
}


message DescribePoetryInfoResponse {
    int32 total = 1;
    repeated PoetryInfo poetryInfoList = 2;
}
